--- a/khan-exercises/exercises/teller_en_noemer.html
+++ b/khan-exercises/exercises/teller_en_noemer.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8" />
     <title>Teller en noemer</title>
     <script src="../khan-exercise.js"></script>
+	
 </head>
 <body>
     <!--
-        Compares fractions that have the same numerator or have the same denominator.
-        TODO: would like to draw overlapping circles or rectangle slices for hints.
+       
     -->
     <div class="exercise">
         <div class="vars">
-            <var id="NUM_1">randRange(1,6)</var>
-            <var id="DEN_1">randRange( NUM_1 + 1, 10 )</var>
+            <var id="NUM_1">randRange(1,8)</var>
+            <var id="DEN_1">randRange( NUM_1 + 1, 10 )</var>			
+			<var id = "ROOD_STUK_STRING">NUM_1 ==1 ? "rood stuk" : "rode stukken"</var>			
         </div>
         <div class="problems">
+
+					   
             <div id="pie-chart">
                 <div class="question">
                       <p data-tt="exercise1">Hoe groot is de teller van de taart? Hoe groot is de noemer?</p>
@@ -32,10 +35,11 @@
 </div>
                 <div class="hints">
                     <p data-tt="hint1">Tel de rode stukken voor de teller.</p>
-                    <p data-tt="hint2">Er <var>plural( "is", NUM_1 )</var> <var>plural( NUM_1, "stuk")</var> rood.</p>
-                    <p data-tt="hint3">Tel het totaal aantal stukken (<code>\color{#e00}{\text{Rode Stukken}}</code> + <code>\color{#999}{\text{Grijze Stukken}}</code>) voor de noemer.</p>
-                    <p data-tt="hint4">Er zijn in totaal <var>DEN_1</var> stukken.</p>
-                    <p data-tt="hint5">Dus je antwoord zou moeten zijn teller: <var>NUM_1</var>, noemer: <var>DEN_1</var></p>
+                    <p data-tt="hint2"><code>{\color{#e00}{\text{Er <var>plural( "is", NUM_1 )</var> <var>NUM_1</var>					   				 					   
+					   <var>ROOD_STUK_STRING</var>.}}}</code></p>				   
+                    <p data-tt="hint3">Tel het totaal aantal stukken (rode stukken + grijze stukken) voor de noemer.</p>
+                    <p data-tt="hint4"><code>{\color{#00e}{\text{Er zijn in totaal <var>DEN_1</var> stukken.}}}</code></p>
+                    <p data-tt="hint5">Dus je antwoord zou moeten zijn: teller = <var>NUM_1</var>, noemer = <var>DEN_1</var></p>
                 </div>
             </div>
 
