Een paar kleine taalaanpassingen gemaakt.

--- a/khan-exercises/exercises/geheel_getal_schrijven_als_breuk.html
+++ b/khan-exercises/exercises/geheel_getal_schrijven_als_breuk.html
@@ -18,12 +18,12 @@
 
     <div class="problems">
         <div>
-            <p data-tt="question1" class="question">Welk nummer kan <code><var>SYMBOL</var></code> hieronder vervangen?</p>
+            <p data-tt="question1" class="question">Welk getal kan <code><var>SYMBOL</var></code> hieronder vervangen?</p>
             <p><code><var>A</var> = \dfrac{<var>SYMBOL</var>}{<var>B</var>}</code></p>
             <div class="solution" data-forms="integer"><var>C</var></div>
             <div class="hints">
                 <div>
-                    <p data-tt="hint1"><var>A</var> is gelijk aan <code><var>SYMBOL</var></code> gedeeld door <var>B</var> .</p>
+                    <p data-tt="hint1"><var>A</var> is gelijk aan <code><var>SYMBOL</var></code> gedeeld door <var>B</var></p>
                    <!-- <div class="graphie">
                         init({ range: [ [0, 1], [0, 1] ], scale: [180, 25] });
                         rectchart( [A, B - A], ["#e00", "#999"] );
@@ -37,13 +37,13 @@
                     </div>
                 </div>-->
                 <div>
-                    <p data-tt="hint2"> En <code><var>A</var> * <var>B</var> = <var>C</var></code></p>
+                    <p data-tt="hint2"> en <code><var>A</var> * <var>B</var> = <var>C</var></code></p>
                   <!--  <div class="graphie">
                         init({ range: [ [0, 1], [0, 1] ], scale: [180, 25] });
                         rectchart( [C, D - C], ["#e00", "#999"] );
                     </div>-->
                 </div>
-                <p data-tt="hint3" >Dus <code><var>A</var> = \dfrac{<var>C</var>}{<var>B</var>}</code>.</p>
+                <p data-tt="hint3" >dus <code><var>A</var> = \dfrac{<var>C</var>}{<var>B</var>}</code></p>
 
               <!--  <div>
                     <p data-tt="hint5" >Another way to get the answer is to multiply by <code>\dfrac{<var>M</var>}{<var>M</var>}</code>.</p>
