--- a/khan-exercises/exercises/gemengde_breuk_naar_breuk.html
+++ b/khan-exercises/exercises/gemengde_breuk_naar_breuk.html
@@ -66,7 +66,7 @@
                 </div>
                 -->
                 <div id="mixed-to-improper">
-                    <p  data-tt="question2" class="question">Zet <code><var>WHOLE</var>\ <var>fraction( M_NUM, M_DENOM, false, true )</var></code> om naar een onechte breuk.</p>
+                    <p  data-tt="question2" class="question">Zet <code><var>WHOLE</var>\ <var>fraction( M_NUM, M_DENOM, false, true )</var></code> om naar een gewone breuk.</p>
 
                     <p class="solution" data-type="improper"><var>I_NUM / I_DENOM</var></p>
 
@@ -74,8 +74,8 @@
                         <p><code>\color{#FFA500}{<var>WHOLE</var>}\ \color{#6495ED}{<var>fraction( M_NUM, M_DENOM, false, true )</var>}</code></p>
                         <p data-tt="hint7" >Deze gemengde breuk is equivalent aan <code>\color{#FFA500}{<var>WHOLE</var>} + \color{#6495ED}{<var>fraction( M_NUM, M_DENOM, false, true )</var>}</code>.</p>
                         <div>
-                            <p data-tt="hint8" >Zet eerst het <span class="hint_orange">gehele getal</span> van de gemengde breuk om naar een breuk met dezelfde deler. <code><var>M_REDUCED_DENOM</var></code> als de <span class="hint_blue">deler</span>.</p>
-                            <p><code>\color{#FFA500}{<var>WHOLE</var>} \times \dfrac{<var>M_REDUCED_DENOM</var>}{<var>M_REDUCED_DENOM</var>} = \color{#FFA500}{\dfrac{<var>WHOLE * M_REDUCED_DENOM</var>}{<var>M_REDUCED_DENOM</var>}}</code></p>
+                            <p data-tt="hint8" >Zet eerst het <span class="hint_orange">hele getal</span> van de gemengde breuk om naar een breuk met dezelfde deler, namenlijk <code><var>M_REDUCED_DENOM</var></code>.</p>
+                            <p><code>\color{#FFA500}{<var>WHOLE</var>  = \dfrac{<var>WHOLE * M_REDUCED_DENOM</var>}{<var>M_REDUCED_DENOM</var>}}</code></p>
                             <div class="graphie">
                                 init({ range: [ [0, 1], [0, WHOLE] ], scale: [250, 25] });
 
@@ -85,7 +85,7 @@
                             </div>
                         </div>
                         <div>
-                            <p data-tt="hint9" >Nu hebben we ons nummer in de vorm <code>\color{#FFA500}{\dfrac{<var>WHOLE * M_REDUCED_DENOM</var>}{<var>M_REDUCED_DENOM</var>}} + \color{#6495ED}{<var>fraction( M_NUM, M_DENOM, false, true )</var>}</code>.</p>
+                            <p data-tt="hint9" >Nu hebben we ons oorspronkelijke getal (de gemengde breuk) in de vorm <br /><br /><code>\color{#FFA500}{\dfrac{<var>WHOLE * M_REDUCED_DENOM</var>}{<var>M_REDUCED_DENOM</var>}} + \color{#6495ED}{<var>fraction( M_NUM, M_DENOM, false, true )</var>}</code>.</p>
                             <div class="graphie">
                                 init({ range: [ [0, 1], [0, WHOLE + 1] ], scale: [250, 25] });
 
@@ -98,6 +98,9 @@
                             <p data-tt="hint10" >Tel nu de twee breuken op en vereenvoudig!</p>
                         </div>
                         <p><code>\color{#FFA500}{\dfrac{<var>WHOLE * M_REDUCED_DENOM</var>}{<var>M_REDUCED_DENOM</var>}} + \color{#6495ED}{<var>fraction( M_NUM, M_DENOM, false, true )</var>} = <var>fraction( I_NUM, I_DENOM, true, true )</var></code></p>
+						<p>Samengevat:<br /><br />
+						<code>\color{#FFA500}{<var>WHOLE</var>}\ \color{#6495ED}{<var>fraction( M_NUM, M_DENOM, false, true )</var>}</code> = 
+						<code>\color{#FFA500}{\dfrac{<var>WHOLE * M_REDUCED_DENOM</var>}{<var>M_REDUCED_DENOM</var>}} + \color{#6495ED}{<var>fraction( M_NUM, M_DENOM, false, true )</var>} = <var>fraction( I_NUM, I_DENOM, true, true )</var></code></p>
                     </div>
                 </div>
             </div>
