--- a/khan-exercises/exercises/twee_breuken_dezelfde_deler_geven.html
+++ b/khan-exercises/exercises/twee_breuken_dezelfde_deler_geven.html
@@ -20,23 +20,35 @@
     <div class="problems">
         <div>
             <div class="question">
-                <p>Geef <code> a</code> en <code>b </code> dezelfde noemer.</p><p><code>a: <var>fraction( N1, D1 )</var></code></p><p><code> b:<var>fraction( N2, D2 )</var></code></p>
+                <p>Geef de volgende twee breuken dezelfde noemer:</p>
+				<p><code><var>fraction( N1, D1 )</var></code>   en   <code><var>fraction( N2, D2 )</var></code></p>
             </div>
 <div class="solution" data-type="multiple">
-    <p> deler = <span class="sol" data-type="decimal"><var>D1*D2</var></span></p>
-    <p><code>a </code> noemer = <span class="sol" data-type="decimal" ><var>N1*D2</var></span></p>
-    <p><code>b </code> noemer = <span class="sol" data-type="decimal"><var>N2*D1</var></span></p>
-
+    <p> noemer = <span class="sol" data-type="decimal"><var>D1*D2</var></span></p>
+    <p> teller 1 = <span class="sol" data-type="decimal" ><var>N1*D2</var></span></p>
+    <p> teller 2 = <span class="sol" data-type="decimal"><var>N2*D1</var></span></p>
 </div>
         </div>
     </div>
 
     <div class="hints">
-        <p data-tt="hint1">Eerst vermenigvuldigen we de delers: <code><var>D1</var></code> en <code><var>D2</var></code>.</p>
-        <p data-tt="hint1a">Dat wordt <code><var>D1*D2</var></code>.</p>
-        <p data-tt="hint2">Nu veranderen we beide breuken zodat ze een deler hebben van <code><var>D1*D2</var></code>.</p>
-        <p><code><code><var>fraction(N1,D1) </var> * <var>fraction(D2,D2)</var>=<var>fraction( N1*D2, D1*D2 )</var></code></p>
-       <p><code> <var>fraction(N2,D2)</var> * <var>fraction(D1,D1)</var> = <var>fraction( N2*D1, D1*D2 )</var></code></p>
+        <p data-tt="hint1">Je kunt altijd een gemeenschappelijke noemer kiezen door de twee noemers met elkaar te vermenigvuldigen.
+		<br />De nieuwe gemeenschappelijke noemer wordt dan:
+		<code><var>D1</var></code> x <code><var>D2</var></code> = <code><var>D1*D2</var></code>.</p>
+       
+        <p data-tt="hint2">Nu veranderen we beide breuken zodat ze een noemer hebben van <code><var>D1*D2</var></code>.</p>
+		
+        <p data-tt="hint3"><code>{\color{#e00}{<var>fraction(N1,D1)</var> = <var>fraction( N1*D2, D1*D2 )</var>}}</code>
+		(teller en noemer vermenigvuldigd met <var>D2</var>)
+		</p>
+        
+		<p data-tt="hint4"><code>{\color{#56C248}{ <var>fraction(N2,D2)</var> = <var>fraction( N2*D1, D1*D2 )</var>}}</code>
+		(teller en noemer vermenigvuldigd met <var>D1</var>)
+		</p>
+		
+		<p data-tt="hint5"><code>{\color{#00e}{<var>fraction( N1, D1 )</var>   en   <var>fraction( N2, D2 )</var>}}</code> is gelijkwaardig aan 
+		   <code>{\color{#00e}{<var>fraction( N1*D2, D1*D2 )</var> en <var>fraction( N2*D1, D1*D2 )</var>}}</code>
+		</p>
 
      <!--<div>
             <p data-tt="hint3">Nu nog vereenvoudigen:</p>
