--- a/khan-exercises/exercises/dependent_probability.html
+++ b/khan-exercises/exercises/dependent_probability.html
@@ -91,8 +91,8 @@
                 <p class="problem" data-tt="question1">Er zitten <code><var>NUM_COINS</var></code> munten in een zak. <code><var>NUM_UNFAIR_COINS</var></code> ervan zijn niet zuiver want je hebt <code><var>PERCENT_CHANCE_UNFAIR_HEADS</var>\%</code> kans om er kop mee te gooien (de andere munten zijn zuiver).
                 Je kiest willekeurig 1 munt uit en gooit deze <code><var>NUM_FLIPS</var></code> keer op.</p>
                 <p class="question" data-tt="question2">Wat is de kans, geschreven als een percentage, dat het <code><var>NUM_FLIPS</var></code> keer kop wordt? 
-                Rond je antwoord af op een honderdste van een procent.</p>
-                <p class="solution" data-forms="percent" data-max-error="0.01"><var>ANSWER</var></p>
+                Rond je antwoord af op een honderdste van een procent. <var>ANSWER</var></p>
+                <p class="solution"><var>ANSWER</var></p> 
             </div>
         </div>
 
