randen hele cirkels nog zien te verwijderen

--- a/khan-exercises/exercises/gemengde_breuken_herkennen.html
+++ b/khan-exercises/exercises/gemengde_breuken_herkennen.html
@@ -54,7 +54,7 @@ Het veranderen van de line color is hier niet gebeurd.
                             	piechart( [NUM, DEN - NUM], ["#e00", "#999"], 2 );
                         </span><br><br><br><br><br><br><br><br><br><br><br><br><br>
                 </div>
-                <p class="solution" data-simplify="optional"><code><var>WHOLE+NUM/DEN</var></code></p>
+                <p class="solution" data-simplify="optional"><code><var>WHOLE+(NUM/DEN)</var></code></p>
                 <div class="hints">	
                 	<p data-tt="hint1">Tel eerst de hoeveelheid <span class ="hint_orange">hele pizza's</span>.</p>
                		<p data-tt="hint2">Dat zijn er <code>\color{#FFA500}{<var>WHOLE</var>}</code>.</p>
