--- a/khan-exercises/exercises/reading_stem_and_leaf_plots.html
+++ b/khan-exercises/exercises/reading_stem_and_leaf_plots.html
@@ -113,7 +113,7 @@
             </p>
         </div>
         <div>
-            <p>Nu weten we het aantal <var>plural( ITEM )</var> in elke <var>plural( LOCATION )</var>:</p>
+            <p>Nu weten we het aantal <var>plural( ITEM )</var> in elke <var>LOCATION</var>:</p>
             <p><code>\qquad</code><var>toSentenceTex( RAW_DATA )</var></p>
         </div>
         <div>
@@ -128,7 +128,7 @@
                 <var>plural( AMOUNT, ITEM )</var>?</p>
             </span>
             <p data-if="SOLUTION > 0">
-                <code>\qquad</code><var>toSentenceTex( RAW_DATA, "and", IS_SOLUTION, "hint_pink" )</var>
+                <code>\qquad</code><var>toSentenceTex( RAW_DATA, "en", IS_SOLUTION, "hint_pink" )</var>
             </p>
         </div>
         <div>
