--- a/khan-exercises/exercises/solving_similar_triangles_1.html
+++ b/khan-exercises/exercises/solving_similar_triangles_1.html
@@ -2,7 +2,7 @@
 <html data-require="math graphie graphie-helpers graphie-geometry math-format">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Solving Similar Triangles 1</title>
+    <title>Het oplossen van driehoeken 1</title>
     <script src="../khan-exercise.js"></script>
     <script>
         function triangleAngles( sides ){
@@ -111,8 +111,8 @@
         <div class="problems">
         <div id="similar">
             <div class="problem">
-                <p>Triangle <code><var>A_NAME</var></code> is similar to triangle <code><var>B_NAME</var></code>.</p>
-                <p>Solve for <code><var>X</var></code>.</p>
+                <p>Driehoek <code><var>A_NAME</var></code> is gelijk aan driehoek <code><var>B_NAME</var></code>.</p>
+                <p>Oplossing voor <code><var>X</var></code>.</p>
             </div>
         <div class="question">
                 <div class="graphie" id="triangles" >
@@ -155,24 +155,24 @@
             </div>
 
             <div class="hints">
-                <p>Similar triangles have proportional sides.</p>
-                <p>Therefore, we can set up equivalent proportions and solve for <code><var>X</var></code>.</p>
+                <p>Vergelijkbare driehoeken hebben evenredige zijden.</p>
+                <p>Daarom kunnen wij gelijke delen en oplossen voor<code><var>X</var></code>.</p>
                 <div>
                     <p><code>\dfrac{\color{red}{<var>B_LABELS[SOLUTION_INDEX]</var>}}{\color{blue}{<var>A_SIDES[SOLUTION_INDEX]</var>}} = \dfrac{\color{red}{<var>B_LABELS[PROP_INDEX]</var>}}{\color{blue}{<var>A_SIDES[PROP_INDEX]</var>}}</code></p>
-                    <p data-if="A_SIDES[PROP_INDEX] !== A_SIDES[ALTERNATE_INDEX]">Note: As each corresponding <code>\dfrac{\color{red}{side}}{\color{blue}{side}}</code> proportion is equivalent, you could use the other sides (i.e.,  <code>\dfrac{\color{red}{<var>B_LABELS[SOLUTION_INDEX]</var>}}{\color{blue}{<var>A_SIDES[SOLUTION_INDEX]</var>}} = \dfrac{\color{red}{<var>B_LABELS[ALTERNATE_INDEX]</var>}}{\color{blue}{<var>A_SIDES[ALTERNATE_INDEX]</var>}}</code>)</p>
+                    <p data-if="A_SIDES[PROP_INDEX] !== A_SIDES[ALTERNATE_INDEX]">Opmerking: Als elk corresponderende aandeel gelijk is <code>\dfrac{\color{red}{side}}{\color{blue}{side}}</code> kan je de andere zijde gebruiken (i.e.,  <code>\dfrac{\color{red}{<var>B_LABELS[SOLUTION_INDEX]</var>}}{\color{blue}{<var>A_SIDES[SOLUTION_INDEX]</var>}} = \dfrac{\color{red}{<var>B_LABELS[ALTERNATE_INDEX]</var>}}{\color{blue}{<var>A_SIDES[ALTERNATE_INDEX]</var>}}</code>)</p>
                 </div>
 
                 <div>
-                    <p>Reduce the proportion on the right hand side.</p>
+                    <p>Verminder het aandeel aan de rechterkant.</p>
                     <p><code>\dfrac{\color{red}{<var>B_LABELS[SOLUTION_INDEX]</var>}}{\color{blue}{<var>A_SIDES[SOLUTION_INDEX]</var>}} = \cancel{\dfrac{\color{red}{<var>B_LABELS[PROP_INDEX]</var>}}{\color{blue}{<var>A_SIDES[PROP_INDEX]</var>}}}{\color{green}{<var>fractionReduce(B_LABELS[PROP_INDEX], A_SIDES[PROP_INDEX])</var>}}</code></p>
                 </div>
 
                 <div>
-                    <p>Multiply each side by <code><var>A_SIDES[SOLUTION_INDEX]</var></code> and simplify.</p>
+                    <p>Vermenigvuldig beide zijden door<code><var>A_SIDES[SOLUTION_INDEX]</var></code> en vereenvoudig.</p>
                     <p><code>\cancel{<var>A_SIDES[SOLUTION_INDEX]</var>} \times \dfrac{\color{red}{<var>B_LABELS[SOLUTION_INDEX]</var>}}{\cancel{\color{blue}{<var>A_SIDES[SOLUTION_INDEX]</var>}}} = \color{green}{<var>fractionReduce(B_LABELS[PROP_INDEX], A_SIDES[PROP_INDEX])</var>} \times <var>A_SIDES[SOLUTION_INDEX]</var></code></p>
                 </div>
 
-                <p class="final_answer"><code>\color{red}{<var>X</var>}</code> is equal to <code><var>SOLUTION</var></code>.</p>
+                <p class="final_answer"><code>\color{red}{<var>X</var>}</code> is gelijk aan <code><var>SOLUTION</var></code>.</p>
 
             </div>
         </div>
